<resources>
    <string name="app_name">NavUS</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="source">Source:</string>
    <string name="destination">Destination:</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_hint">Search for a place</string>
    <string name="title_activity_search">search</string>
    <string name="route_server_unavailable">Could not connect to route server. Please try again later.</string>
    <string name="google_server_unavailable">Could not connect to Google\'s server. Please try again later.</string>
    <string name="calculating_route">Calculating Route</string>
    <string name="enable_location">Please enable location services to avoid entering your source.</string>
    <string name="lessthan">&lt;</string>
    <string name="greaterthan">&gt;</string>
    <string name="no_route_found">No route found.</string>
    <string name="no_eta_available">ETA is not available as there is no information on the third and subsequent buses.</string>
    <string name="na">NA</string>
    <string name="walk_to_destination">You are within walking distance to your destination.</string>
    <string name="route">&lt;b&gt;Route %1$d of %2$d: %3$s mins&lt;/b&gt;&lt;br /&gt;ETA: %4$s&lt;br /&gt;No of transits: %5$d</string>
    <string name="select">Select</string>
    <string name="reattempt">Reattempting to connect to server.</string>
    <string name="reattempt2">Reattempting to connect to server again.</string>
    <string name="eta">ETA:\n %1$s</string>
    <string name="map">Map</string>
    <string name="satellite">Satellite</string>
    <string name="board">Board %1$s arriving in %2$s mins (%3$s)</string>
    <string name="alight_at">Alight at %1$s</string>
    <string name="alight_here">Alight here</string>
    <string name="transfer">Transfer from %1$s to %2$s at %3$s\nArriving in %4$s mins (%5$s)</string>
    <string name="transfer_here">Transfer from %1$s to %2$s here.\nArriving in %3$s mins (%4$s)</string>
    <string name="back_again">Tap back again to exit the NavUS</string>
    <string name="your_location">YOUR LOCATION</string>
    <string name="head_to">Head to %1$s</string>
    <string name="walk_from">Walk from %1$s to %2$s</string>
    <string name="walk_from_here">Walk from %1$s to here</string>
    <string name="autopan">Enable Auto Pan</string>
    <string name="autopan_enabled">Auto Pan has been enabled.</string>
    <string name="running">NavUS is running in the background.</string>
    <string name="getting_arrival_info">Getting arrival information</string>
    <string name="arriving">Arriving</string>
    <string name="mins">%1$s mins</string>
    <string name="favourites_added">%1$s has been added to your favourites.</string>
    <string name="favourites_removed">%1$s has been removed from your favourites.</string>
    <string name="welcome">Welcome to NavUS!</string>
    <string name="search_bar_tap">Tap here to enter your source and destination</string>
    <string name="source_tap">Tap here to enter your source. If you enabled location services, it will be populated with YOUR LOCATION.</string>
    <string name="destination_tap">Tap here to enter your destination. Tap on the star icon to add the location to your favourites. A clock icon indicates your recent searches.</string>
    <string name="route_selection">Route Selection</string>
    <string name="route_selection_tap">Tap on the arrow buttons to view available routes.</string>
    <string name="select_route">Tap here to select your route.</string>
    <string name="green_icon">This green bus icon indicates your source.</string>
    <string name="blue_icon">This blue bus icon indicates a transit stop.</string>
    <string name="red_icon">This red bus icon indicates your destination bus stop.</string>
    <string name="red_icon_default">This red icon indicates your destination.</string>
    <string name="white_icon">This white icon indicates the bus stops along your route.</string>
    <string name="bus_stop_icon">Tap on this icon on the map to view bus arrival timings.</string>
    <string name="route_instructions">Route Instructions</string>
    <string name="route_instructions_tap">Tap on the arrow buttons to view your route instructions. Press the back button to return to the route selection screen.</string>
    <string name="satellite_tap">Tap here to switch the map to satellite view.</string>
    <string name="enjoy">Enjoy!</string>
    <string name="bonus_tip">Bonus Tip: Leave NavUS running in the background to receive notifications on your route instructions.</string>
    <string name="opps">Opps!</string>
    <string name="guide_again">Look\'s like there\'s currently no route found. We\'ll resume this tutorial the next time there\'s a route found.</string>
    <string name="next_stop">\u0020(Next Stop)</string>
    <string name="stop">Stop</string>
    <string name="please_wait">Please wait as we are still computing your route.</string>
</resources>