<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/sourcelabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/source"
                android:gravity="center_vertical"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/source"
                android:textColor="@color/text_default"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:drawableEnd="@drawable/cross"
                android:drawablePadding="8dp"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">


            <TextView
                android:id="@+id/destinationlabel"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:text="@string/destination"
                android:gravity="center_vertical"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/destination"
                android:textColor="@color/text_default"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:drawableEnd="@drawable/cross"
                android:drawablePadding="8dp"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/listresults"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>